--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "babel": "babel src/app.js -o public/bundle.js --presets @babel/preset-env --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,9 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.3",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
